// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompressionRspackPlugin should not compress child compilation assets: errors 1`] = `[]`;

exports[`CompressionRspackPlugin should not compress child compilation assets: warnings 1`] = `[]`;

exports[`CompressionRspackPlugin should run plugin against assets added later by plugins: assets 1`] = `
[
  [
    "main.js",
    1331,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "main.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "newFile.js",
    23,
    {
      "assetType": "unknown",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
]
`;

exports[`CompressionRspackPlugin should run plugin against assets added later by plugins: errors 1`] = `[]`;

exports[`CompressionRspackPlugin should run plugin against assets added later by plugins: warnings 1`] = `[]`;

exports[`CompressionRspackPlugin should use compilation cache on rebuild: errors 1`] = `[]`;

exports[`CompressionRspackPlugin should use compilation cache on rebuild: warnings 1`] = `[]`;

exports[`CompressionRspackPlugin should work and do not use memory cache when the "cache" option is "false": assets 1`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[hash].png.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.async.js",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "async.async.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "main.js",
    10067,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "main.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
]
`;

exports[`CompressionRspackPlugin should work and do not use memory cache when the "cache" option is "false": assets 2`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[hash].png.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.async.js",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "async.async.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "main.js",
    10067,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "main.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
]
`;

exports[`CompressionRspackPlugin should work and do not use memory cache when the "cache" option is "false": errors 1`] = `[]`;

exports[`CompressionRspackPlugin should work and do not use memory cache when the "cache" option is "false": errors 2`] = `[]`;

exports[`CompressionRspackPlugin should work and do not use memory cache when the "cache" option is "false": warnings 1`] = `[]`;

exports[`CompressionRspackPlugin should work and do not use memory cache when the "cache" option is "false": warnings 2`] = `[]`;

exports[`CompressionRspackPlugin should work and keep assets info: assets 1`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[hash].png.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.async.[hash].js",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "async.async.[hash].js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "main.[hash].js",
    10094,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "main.[hash].js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
]
`;

exports[`CompressionRspackPlugin should work and keep assets info: errors 1`] = `[]`;

exports[`CompressionRspackPlugin should work and keep assets info: warnings 1`] = `[]`;

exports[`CompressionRspackPlugin should work and show compress assets in stats: assets 1`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[hash].png.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.async.js",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "async.async.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "main.js",
    10067,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "main.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
]
`;

exports[`CompressionRspackPlugin should work and show compress assets in stats: errors 1`] = `[]`;

exports[`CompressionRspackPlugin should work and show compress assets in stats: warnings 1`] = `[]`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRatio" option: assets 1`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[hash].png.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.js",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "async.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "main.js",
    10051,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "main.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
]
`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRatio" option: assets 2`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[hash].png.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.js",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "async.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "main.js",
    10051,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "main.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
]
`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRatio" option: errors 1`] = `[]`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRatio" option: errors 2`] = `[]`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRatio" option: warnings 1`] = `[]`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRatio" option: warnings 2`] = `[]`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: assets 1`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[hash].png.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.js",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "async.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "main.js",
    10051,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "main.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
]
`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: assets 2`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[hash].png.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.js",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "async.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "main.js",
    10088,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "main.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
]
`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: errors 1`] = `[]`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: errors 2`] = `[]`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: warnings 1`] = `[]`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: warnings 2`] = `[]`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: assets 1`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[hash].png.br",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "[hash].png.custom",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "[hash].png.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.js",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "async.js.br",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "async.js.custom",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "async.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "[hash].svg.br",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "[hash].svg.custom",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "main.js",
    10051,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "main.js.br",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "main.js.custom",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "main.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
]
`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: assets 2`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[hash].png.br",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "[hash].png.custom",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "[hash].png.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.js",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "async.js.br",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "async.js.custom",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "async.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "[hash].svg.br",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "[hash].svg.custom",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "main.js",
    10051,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "main.js.br",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "main.js.custom",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "main.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
]
`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: errors 1`] = `[]`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: errors 2`] = `[]`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: warnings 1`] = `[]`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: warnings 2`] = `[]`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true": assets 1`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[hash].png.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.js",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "async.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "main.js",
    10051,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "main.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
]
`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true": assets 2`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[hash].png.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.js",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "async.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "main.js",
    10051,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "main.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
]
`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true": errors 1`] = `[]`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true": errors 2`] = `[]`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true": warnings 1`] = `[]`;

exports[`CompressionRspackPlugin should work and use memory cache when the "cache" option is "true": warnings 2`] = `[]`;

exports[`CompressionRspackPlugin should work and use memory cache without options in the "development" mode: assets 1`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[hash].png.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.async.[hash].js",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "async.async.[hash].js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "main.[hash].js",
    10094,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "main.[hash].js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
]
`;

exports[`CompressionRspackPlugin should work and use memory cache without options in the "development" mode: assets 2`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[hash].png.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.async.[hash].js",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "async.async.[hash].js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "main.[hash].js",
    10094,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "main.[hash].js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
]
`;

exports[`CompressionRspackPlugin should work and use memory cache without options in the "development" mode: errors 1`] = `[]`;

exports[`CompressionRspackPlugin should work and use memory cache without options in the "development" mode: errors 2`] = `[]`;

exports[`CompressionRspackPlugin should work and use memory cache without options in the "development" mode: warnings 1`] = `[]`;

exports[`CompressionRspackPlugin should work and use memory cache without options in the "development" mode: warnings 2`] = `[]`;

exports[`CompressionRspackPlugin should work with 'webpack-stats-plugin': assets 1`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[hash].png.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.async.[hash].js",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "async.async.[hash].js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "main.[hash].js",
    10094,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "main.[hash].js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "stats.json",
    2,
    {
      "assetType": "unknown",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
]
`;

exports[`CompressionRspackPlugin should work with 'webpack-stats-plugin': errors 1`] = `[]`;

exports[`CompressionRspackPlugin should work with 'webpack-stats-plugin': warnings 1`] = `[]`;

exports[`CompressionRspackPlugin should work with assets info: assets 1`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[hash].png.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.async.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.async.js.map?ver=[hash]",
    243,
    {
      "assetType": "unknown",
      "chunkhash": [],
      "contenthash": [],
      "development": true,
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "async.async.js?ver=[hash]",
    499,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "sourceMap": "async.async.js.map?ver=[hash]",
      },
    },
  ],
  [
    "copied.js",
    400,
    {
      "assetType": "unknown",
      "chunkhash": [],
      "contenthash": [],
      "copied": true,
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "copied.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "main.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "main.js.map.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "main.js.map?var=[hash]",
    10326,
    {
      "assetType": "unknown",
      "chunkhash": [],
      "contenthash": [],
      "development": true,
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "main.js?var=[hash]",
    10152,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "sourceMap": "main.js.map?var=[hash]",
      },
    },
  ],
]
`;

exports[`CompressionRspackPlugin should work with assets info: errors 1`] = `[]`;

exports[`CompressionRspackPlugin should work with assets info: warnings 1`] = `[]`;

exports[`CompressionRspackPlugin should work with multiple plugins: assets 1`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[hash].png.br",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "[hash].png.compress",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "[hash].png.custom?foo=bar#hash",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "[hash].png.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.async.js.br",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.async.js.compress",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.async.js.custom?foo=bar#hash",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.async.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.async.js?ver=[hash]",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "[hash].svg.br",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "[hash].svg.compress",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "[hash].svg.custom?foo=bar#hash",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "main.js.br",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "main.js.compress",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "main.js.custom?foo=bar#hash",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "main.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "main.js?var=[hash]",
    10098,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
]
`;

exports[`CompressionRspackPlugin should work with multiple plugins: errors 1`] = `[]`;

exports[`CompressionRspackPlugin should work with multiple plugins: warnings 1`] = `[]`;

exports[`CompressionRspackPlugin should work: assets 1`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[hash].png.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.async.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.async.js?ver=[hash]",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "main.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "main.js?var=[hash]",
    10098,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
]
`;

exports[`CompressionRspackPlugin should work: errors 1`] = `[]`;

exports[`CompressionRspackPlugin should work: warnings 1`] = `[]`;
